--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Charmonman&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap");
+
+@import "../node_modules/bulma/css/bulma.css";
+
+body {
+  padding: 0;
+  margin: 0;
+  height: 100vh !important;
+  width: 100vw !important;
+  box-sizing: border-box !important;
+}
+
+.vehicle_bubble > p {
+  margin-top: 2px;
+}
+.parking_bubble > p {
+  margin-top: 2px;
+}
