--- a/src/app/filter-menu/filter-menu.component.css
+++ b/src/app/filter-menu/filter-menu.component.css
@@ -1,28 +1,50 @@
-.filter_menu {
-  position: absolute;
-  width: 95%;
-  max-width: 720px;
-  height: 30%;
-  bottom: 5%;
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 1;
-
-  transition: 200ms ease-in-out;
-}
-
-.filter_menu__box {
-  width: 95%;
-  max-width: 720px;
+.wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
+  height: 300px;
+  width: 90%;
+  max-width: 720px;
+
   position: absolute;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
+  bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
+
+  font-family: "Orbitron", sans-serif;
+}
+.filter_menu {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* max-width: 720px; */
+  height: 82%;
+  margin-bottom: 5px;
+  /* max-height: 30%; */
+  /* position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%); */
+  opacity: 1;
+  visibility: visible;
+  /* transition: 200ms ease-in-out; */
+  transition: opacity 200ms ease-in-out, height 200ms ease-in-out;
+}
+
+.filter_menu__box {
+  height: 100%;
+  /* width: 100%;
+  max-width: 720px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  /* width: 100%; */
+  /* position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%); */
   background: radial-gradient(
     100% 211.93% at 0% 0%,
     rgba(242, 239, 239, 0.7) 0%,
@@ -33,28 +55,34 @@
   backdrop-filter: blur(4px);
   border-radius: 20px;
   opacity: 1;
-
-  transition: 200ms ease-in-out;
+  /* visibility: visible; */
+  /*
+  transition: display 0 linear, opacity 200ms ease-in-out,
+    height 200ms ease-in-out; */
 }
 
 .invisible {
+  /* visibility: hidden;
+   */
   /* display: none; */
   opacity: 0;
   height: 0;
 }
 
 .filter_menu__open_button {
-  /* position: absolute; */
-  /* bottom: 5.5%; */
-  /* right: 50%; */
+  /* position: absolute;
+  bottom: 5.5%;
+  right: 50%; */
+  /* position: fixed; */
   display: flex;
-  margin: 0 auto;
-  /* margin-bottom: 5rem;
-   */
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
+  margin-top: auto;
+
   width: 45px;
   height: 45px;
+
   background: radial-gradient(
     84.44% 84.44% at 26.67% 6.67%,
     rgba(255, 255, 255, 0.76) 0%,
@@ -65,38 +93,35 @@
   box-sizing: border-box;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(2px);
-  transform: scale(1) rotateZ(180deg);
+  transform: scale(1) rotate(0);
 
   transition: transform 200ms ease-in-out;
 }
 
 .filter_menu__open_button:hover {
   /* transform: scale(1.1); */
-  transform: scale(1.1) rotateZ(180deg);
+  transform: scale(1.1) rotate(0);
 }
 
 .closed {
-  transform: scale(1) rotateZ(0);
+  transform: scale(1) rotateZ(180deg);
+}
+
+.closed:hover {
+  transform: scale(1) rotateZ(180deg);
 }
 
 .filter_menu__header_box {
   width: 35%;
   height: 15%;
   max-width: 150px;
-  /* background: radial-gradient(
-    84.01% 1227.36% at 0% 0%,
-    rgba(255, 255, 255, 0.74) 0%,
-    rgba(184, 177, 177, 0.1) 100%
-  ); */
   border: 1px solid rgba(255, 255, 255, 0.24);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
 
-.filter_menu__header_box > h5 {
-  font-family: "Orbitron", sans-serif;
-  font-size: 22px;
-  text-align: center;
+.filter_menu__header_box > h4 {
+  font-size: 1.3rem;
   padding-top: 3px;
 }
 
@@ -111,16 +136,16 @@
   display: flex;
   width: 100%;
   justify-content: space-around;
-  margin-top: 5px;
+  margin-top: 15px;
 }
 
 .filter_menu__items > ul > li {
-  font-family: "Orbitron", sans-serif;
-
-  width: 20%;
+  font-size: 0.9rem;
+  width: 31%;
   text-align: center;
   cursor: pointer;
   transform: scale(1);
+  border-bottom: none;
 
   transition: 200ms ease-in-out;
 }
@@ -128,15 +153,24 @@
 .filter_menu__items > ul > li:hover {
   transform: scale(1.2);
 }
+
 .filter_menu__charge_slider_container {
   display: flex;
   flex-direction: column;
-  width: 370px;
-  margin: auto;
+  align-items: center;
+  width: 90%;
+  max-width: 500px;
+  margin: auto 0;
+}
+
+.filter_menu__charge_slider_container > label {
+  font-size: 0.8rem;
+  margin-bottom: 10px;
 }
 
 .filter_menu__slider {
   position: relative;
+  width: 80%;
 }
 .slider__box {
   width: 100%;
