--- a/src/app/maps/maps.component.css
+++ b/src/app/maps/maps.component.css
@@ -1,31 +1,56 @@
+.wrapper {
+  height: 100%;
+  max-height: 100vh;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .container {
   position: relative !important;
-  height: 100vh;
-  max-height: 100vh;
-  margin-top: 30px;
+  height: 100%;
+  max-height: 100%;
+  /* margin-top: 30px; */
   /* border-radius: 20px; */
 }
-h1 {
-  font-family: "Courgette", "Charmonman", sans-serif !important;
+
+.title__box {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 30px;
+  left: 50%;
+  background: radial-gradient(
+    84.01% 1227.36% at 0% 0%,
+    rgba(255, 255, 255, 0.74) 0%,
+    rgba(184, 177, 177, 0.1) 100%
+  );
+  border: 1px solid #d8d8d8;
+  box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(4px);
+
+  border-radius: 5px;
+  transform: translateX(-50%);
+
+  z-index: 1000000000;
+}
+
+.title__box > h1 {
+  font-family: "Courgette", sans-serif !important;
   font-weight: 400;
   padding: 0.6rem;
   margin-bottom: 0 !important;
 }
 
 #map {
-  height: 90%;
-  margin: 2px !important;
+  height: 98%;
+  width: 98%;
+  /* padding: 0; */
+  /* margin: 2px !important; */
   border: 3px solid rgb(121, 117, 117);
   outline: 0;
-}
 
-.wave {
-  position: absolute;
-  bottom: -30px;
-  right: 0;
-  width: 100%;
-  z-index: -1;
-}
-
-.marker > * {
+  margin: 0 auto;
 }
