--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,6 +1,9 @@
-<h1 class="title is-4 has-text-centered">Map Markers</h1>
-<div class="section" id="map"></div>
-<!-- <app-marker
+<div class="wrapper">
+  <div class="title__box">
+    <h1 class="title is-4 has-text-centered">{{ appTitle }}</h1>
+  </div>
+  <div class="map" id="map"></div>
+  <!-- <app-marker
   *ngFor="let vehicle of vehicles"
   class="marker"
   [object]="vehicle"
@@ -8,24 +11,23 @@
   name="vehicle"
   #appMarkerRef
 >
-</app-marker>
-<app-marker
+</app-marker>-->
+  <!-- <app-marker
   *ngFor="let parking of parkings"
   class="marker"
   [object]="parking"
-  [icon]="iconParking"
   name="parking"
   #appMarkerRef
 >
-</app-marker> -->
+</app-marker>
 <app-marker
   *ngFor="let poi of pois"
   class="marker"
   [object]="poi"
-  [icon]="iconPoi"
   name="poi"
   #appMarkerRef
 >
-</app-marker>
+</app-marker> -->
 
-<app-filter-menu></app-filter-menu>
+  <app-filter-menu></app-filter-menu>
+</div>
