--- a/src/app/filter-menu/filter-menu.component.css
+++ b/src/app/filter-menu/filter-menu.component.css
@@ -121,7 +121,7 @@
 }
 
 .filter_menu__header_box > h4 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   padding-top: 3px;
 }
 
@@ -132,15 +132,33 @@
   width: 100%;
 }
 
-.filter_menu__items > ul {
+.filter_menu__objects_list {
   display: flex;
   width: 100%;
   justify-content: space-around;
   margin-top: 15px;
 }
 
-.filter_menu__items > ul > li {
+.filter_menu__objects_list > li {
   font-size: 0.9rem;
+  /* width: 31%; */
+  text-align: center;
+  cursor: pointer;
+  transform: scale(1);
+  border-bottom: none;
+
+  transition: 200ms ease-in-out;
+}
+
+.filter_menu__filters {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin-top: 15px;
+}
+
+.filter_menu__filters > li {
+  font-size: 0.8rem;
   width: 31%;
   text-align: center;
   cursor: pointer;
@@ -150,7 +168,7 @@
   transition: 200ms ease-in-out;
 }
 
-.filter_menu__items > ul > li:hover {
+.filter_menu__filters > li:hover {
   transform: scale(1.2);
 }
 
@@ -160,11 +178,12 @@
   align-items: center;
   width: 90%;
   max-width: 500px;
-  margin: auto 0;
+  /* margin: auto 0; */
+  margin-top: 20px;
 }
 
 .filter_menu__charge_slider_container > label {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   margin-bottom: 10px;
 }
 
