--- a/src/app/filter-menu/filter-menu.component.css
+++ b/src/app/filter-menu/filter-menu.component.css
@@ -6,45 +6,29 @@
   height: 300px;
   width: 90%;
   max-width: 720px;
-
   position: absolute;
   bottom: 30px;
-  left: 50%;
   transform: translateX(-50%);
-
+  backdrop-filter: blur(0);
   font-family: "Orbitron", sans-serif;
+  transition: all 0.2s ease-in-out;
 }
 .filter_menu {
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* max-width: 720px; */
   height: 82%;
   margin-bottom: 5px;
-  /* max-height: 30%; */
-  /* position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translateX(-50%); */
   opacity: 1;
   visibility: visible;
-  /* transition: 200ms ease-in-out; */
   transition: opacity 200ms ease-in-out, height 200ms ease-in-out;
 }
-
 .filter_menu__box {
   height: 100%;
-  /* width: 100%;
-  max-width: 720px; */
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  /* width: 100%; */
-  /* position: absolute;
-  bottom: 5px;
-  left: 50%;
-  transform: translateX(-50%); */
   background: radial-gradient(
     100% 211.93% at 0% 0%,
     rgba(242, 239, 239, 0.7) 0%,
@@ -55,34 +39,19 @@
   backdrop-filter: blur(4px);
   border-radius: 20px;
   opacity: 1;
-  /* visibility: visible; */
-  /*
-  transition: display 0 linear, opacity 200ms ease-in-out,
-    height 200ms ease-in-out; */
 }
-
 .invisible {
-  /* visibility: hidden;
-   */
-  /* display: none; */
   opacity: 0;
   height: 0;
 }
-
 .filter_menu__open_button {
-  /* position: absolute;
-  bottom: 5.5%;
-  right: 50%; */
-  /* position: fixed; */
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   margin-top: auto;
-
   width: 45px;
   height: 45px;
-
   background: radial-gradient(
     84.44% 84.44% at 26.67% 6.67%,
     rgba(255, 255, 255, 0.76) 0%,
@@ -94,23 +63,17 @@
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(2px);
   transform: scale(1) rotate(0);
-
   transition: transform 200ms ease-in-out;
 }
-
 .filter_menu__open_button:hover {
-  /* transform: scale(1.1); */
   transform: scale(1.1) rotate(0);
 }
-
 .closed {
   transform: scale(1) rotateZ(180deg);
 }
-
 .closed:hover {
   transform: scale(1) rotateZ(180deg);
 }
-
 .filter_menu__header_box {
   width: 35%;
   height: 15%;
@@ -119,44 +82,39 @@
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
-
 .filter_menu__header_box > h4 {
   font-size: 1.2rem;
   padding-top: 3px;
 }
-
 .filter_menu__items {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
-
 .filter_menu__objects_list {
   display: flex;
   width: 100%;
   justify-content: space-around;
   margin-top: 15px;
 }
-
 .filter_menu__objects_list > li {
   font-size: 0.9rem;
-  /* width: 31%; */
   text-align: center;
   cursor: pointer;
   transform: scale(1);
   border-bottom: none;
-
   transition: 200ms ease-in-out;
 }
-
+.filter_menu__objects_list > li:hover {
+  transform: scale(1.2);
+}
 .filter_menu__filters {
   display: flex;
   width: 100%;
   justify-content: space-around;
   margin-top: 15px;
 }
-
 .filter_menu__filters > li {
   font-size: 0.8rem;
   width: 31%;
@@ -164,12 +122,13 @@
   cursor: pointer;
   transform: scale(1);
   border-bottom: none;
-
   transition: 200ms ease-in-out;
 }
-
 .filter_menu__filters > li:hover {
   transform: scale(1.2);
+}
+.filter_menu__parkings {
+  width: 100%;
 }
 
 .filter_menu__charge_slider_container {
@@ -178,15 +137,12 @@
   align-items: center;
   width: 90%;
   max-width: 500px;
-  /* margin: auto 0; */
   margin-top: 20px;
 }
-
 .filter_menu__charge_slider_container > label {
   font-size: 0.7rem;
   margin-bottom: 10px;
 }
-
 .filter_menu__slider {
   position: relative;
   width: 80%;
@@ -203,7 +159,6 @@
   box-sizing: border-box;
   border-radius: 110px;
 }
-
 .slider__button {
   width: 27px;
   height: 27px;
@@ -212,36 +167,18 @@
   box-sizing: border-box;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25),
     inset 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
-
   border-radius: 100%;
 }
-/*
-#slider__button1 {
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-}
-
-#slider__button2 {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-} */
-
 .filter_menu__slider_text {
   display: flex;
   justify-content: space-between;
   width: 80%;
 }
-
 .filter_menu__slider_text > h6 {
   font-size: 0.7rem;
   width: 50px;
   text-align: center;
 }
-
 .filter_menu__slider_value {
   position: relative;
   width: 100%;
@@ -249,16 +186,10 @@
   justify-content: center;
   align-items: center;
 }
-
 .filter_menu__slider_value span {
   position: absolute;
   height: 29px;
   width: 29px;
-  /* color: white;
-  font-size: large; */
-  /* font-weight: 500; */
-  /* top: -35px; */
-  /* transform: translateX(-50%) scale(1); */
   transform-origin: bottom;
   transition: transform 0.3s ease-in-out;
   display: flex;
@@ -267,7 +198,6 @@
   padding-top: 5px;
   top: 5px;
   left: 0;
-  /* line-height: 55px; */
   z-index: 1;
 }
 .filter_menu__slider_value span.show {
@@ -281,40 +211,31 @@
   left: 50%;
   background: rgba(149, 156, 153, 0.39);
   transform: translateX(-50%) rotateZ(45deg);
-  /* line-height: 55px; */
   z-index: -1;
   border-radius: 0 50% 50% 50%;
   border: 1px solid white;
   bottom: -4px;
 }
-
 input[type="range"] {
   -webkit-appearance: none;
   width: 100%;
-  /* background: transparent; */
 }
-
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
-
 input[type="range"]:focus {
   outline: none;
 }
-
 input[type="range"]::-ms-track {
   width: 100%;
   cursor: pointer;
-
   background: transparent;
   border-color: transparent;
   color: transparent;
 }
-
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   cursor: pointer;
-
   width: 27px;
   height: 27px;
   background: #ffffff;
@@ -322,6 +243,5 @@ input[type="range"]::-webkit-slider-thumb {
   box-sizing: border-box;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25),
     inset 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
-
   border-radius: 100%;
 }
