--- a/src/app/maps/maps.component.css
+++ b/src/app/maps/maps.component.css
@@ -7,12 +7,17 @@
   flex-direction: column;
   align-items: center;
 }
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000000000000;
+}
 .container {
   position: relative !important;
   height: 100%;
   max-height: 100%;
-  /* margin-top: 30px; */
-  /* border-radius: 20px; */
 }
 
 .title__box {
@@ -47,8 +52,6 @@
 #map {
   height: 98%;
   width: 98%;
-  /* padding: 0; */
-  /* margin: 2px !important; */
   border: 3px solid rgb(121, 117, 117);
   outline: 0;
 
