--- a/src/app/filter-menu/filter-menu.component.html
+++ b/src/app/filter-menu/filter-menu.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" [class.blurred]="isLoading">
+<div class="wrapper" [class.hidden]="!isVisible">
   <div class="filter_menu" [class.invisible]="!isVisible">
     <div class="filter_menu__box">
       <div class="filter_menu__header_box">
