--- a/src/app/filter-menu/filter-menu.component.css
+++ b/src/app/filter-menu/filter-menu.component.css
@@ -16,6 +16,24 @@
 .wrapper.hidden {
   height: 50px;
 }
+@media (orientation: landscape) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    height: 280px;
+    width: 40%;
+    max-width: 720px;
+    position: absolute;
+    bottom: 10px;
+    transform: translateX(-120%);
+    -webkit-backdrop-filter: blur(0);
+    backdrop-filter: blur(0);
+    font-family: "Orbitron", sans-serif;
+    transition: all 0.2s ease-in-out;
+  }
+}
 .filter_menu {
   display: flex;
   flex-direction: column;
