--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* overflow: hidden !important; */
 }
 
 body {
   padding: 0;
   margin: 0;
-  /* margin-top: 35px; */
+  margin-top: 5px;
   height: 100vh !important;
   width: 100vw !important;
   box-sizing: border-box !important;
